--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -201,7 +201,8 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity is stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. Trees in European high altitude forests have been shown to maintain sparser stands [@vonarxSpatiotemporalEffectsForest2012a] and open canopies with greater light interception through canopy layers, and therefore to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate mountain forests in China, tree height decreased with altitude, where as tree growth sensitivity (based on tree-rings) to climate change increased. Decrease in temperature altitudinally associated with increased relative humidity [Liang et al. 2019] and understory light interception might have implications to photosynthetic functioning [Sellin et al. 2013], and high altitude pine forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. *Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a] what does this mean? can combine above sentences into one(N.V note)* The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019; **REF**]
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity is stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. Trees in European high altitude forests have shown to maintain sparser stands [@vonarxSpatiotemporalEffectsForest2012a] and open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate humid-mountain forests in China, tree height decreased with 
+altitude, whereas tree growth sensitivity (based on tree-rings) to climate change increased [@liangForestTypeHeight2019]. Less capacity to buffer climatic conditions in open, high altitude forests might thus have implications to forest regeneration [@vonarxSpatiotemporalEffectsForest2012a, @fauset_differences_2018].The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
 ## Leaf temperature 
 
