--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,13 +174,13 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to radiative heat loss from the soil caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015; @juckerCanopyStructureTopography2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to radiative heat loss from the soil caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with higher maximum air temperatures and relative humidity above forest canopies and gaps than in below canopies and understories. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
 Under colder conditions (?), minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021]. However, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed. [@bertrandCommentForestMicroclimate2020]
+Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021], however, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed. [@bertrandCommentForestMicroclimate2020]
 
 *(Add something about risk of freeze.)* 
 
